# Rust-AI-proj

./: .gitignore  Cargo.toml  README.md  rules.md
.cursor/rules/: pre-push-security.mdc  seeker-sim-development.mdc
config/: default.toml
crates/seeker-sim/: Cargo.toml  README.md
crates/seeker-sim/src/: cli.rs  config.rs  lib.rs  main.rs
crates/seeker-sim/src/api/: mod.rs  state.rs
crates/seeker-sim/src/api/routes/: health.rs  mod.rs  runs.rs  sim.rs  static_files.rs
crates/seeker-sim/src/api/static/: app.js  index.html  style.css
crates/seeker-sim/src/domain/: coco.rs  error.rs  mod.rs  types.rs
crates/seeker-sim/src/guidance/: mod.rs  pn.rs  pure_pursuit.rs
crates/seeker-sim/src/ingest/: error.rs  frame_source.rs  mod.rs
crates/seeker-sim/src/pipeline/: mod.rs  run_api.rs  sim_run.rs
crates/seeker-sim/src/sim/: engine.rs  mod.rs  state.rs
crates/seeker-sim/src/telemetry/: latency.rs  mod.rs  plot.rs  record.rs  writer.rs
crates/seeker-sim/src/tracking/: associator.rs  kalman.rs  los.rs  mod.rs  roi_tracker.rs  tracker.rs
crates/seeker-sim/src/vision/: decode.rs  detector.rs  mod.rs  motion.rs  postprocess.rs  preprocess.rs
data/: README.md
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  GITHUB_SETUP.md  GLOSSARY.md  LEARNING_ROADMAP.md  PROJECT_BRIEF.md  README.md  TOOLS.md
models/: README.md
scripts/: README.md  download-model.ps1  download-sample-image.ps1  extract-frames.ps1  generate-dot-video.ps1  pre-push-check.ps1
