[package]
name = "seeker-sim"
version = "0.1.0"
edition = "2021"
description = "SeekerSim — visual tracking and guidance simulation (Phase 1: HTTP skeleton)"

[dependencies]
# Async runtime — runs our HTTP server and `.await` calls.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# HTTP server and routing.
axum = "0.8"
# Serialize/deserialize JSON for API responses.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
