[package]
name = "seeker-sim"
version = "0.1.0"
edition = "2021"
description = "SeekerSim — visual tracking and guidance simulation"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
# Phase 2 — vision
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
# Phase 5D — trajectory PNG
plotters = "0.3"

[dev-dependencies]
# In-memory HTTP testing for route handlers.
tower = { version = "0.5", features = ["util"] }

[lib]
name = "seeker_sim"
path = "src/lib.rs"

[[bin]]
name = "seeker-sim"
path = "src/main.rs"
